fix: remove spurious clear() from parseEndingPairs (refs #407)
- Remove pendingEndingPairs.clear() from parseEndingPairs; all other
  parse* methods accumulate without clearing, and the list is already
  empty at the start of each line
- Update test class ParseEndingPairsClearsFirst → ParseEndingPairsAccumulates
  to verify the now-correct accumulation behavior